--- a/src/app/user/create-password/create-password.component.scss
+++ b/src/app/user/create-password/create-password.component.scss
@@ -1,12 +1,12 @@
 h2 {
 	text-transform: uppercase;
 	color: #1F2742;
-	margin: 0 0 27px;
+	margin: 0 0 4px;
 }
 
 .descr {
 	color: #8A8FA5;
-	margin: 0 0 27px;
+	margin: 0 0 36px;
 }
 
 input {
@@ -27,4 +27,7 @@ input {
 	a {
 		font-weight: 600;
 	}
+}
+.pass-btn{
+	padding: 8px 32px!important;
 }
