--- a/src/app/core/private-key/private-key.component.html
+++ b/src/app/core/private-key/private-key.component.html
@@ -1,35 +1,35 @@
-<div class="icon-close" (click)="close()"></div>
+<div class="icon-close" (click)="close()" ></div>
 
-<div *ngIf="false">
-	<h2>Backup Private Key</h2>
-	<p class="description">Enter your password to backup your Private Key.</p>
+<div *ngIf="!passwordVerified">
+	<h2>{{ (backup? 'wallet.backup_pvk' : 'wallet.private_key') | translate}}</h2>
+	<p class="description">{{(backup? 'wallet.enter_pass_pvk' : 'wallet.enter_pass_pvk_see') | translate}}</p>
 
-	<input type="password" placeholder="Password">
-
+	<input type="password" placeholder="{{'user.password' | translate}}" [formControl]="password">
+	<p class="error-message" *ngIf="passError">{{'error.invalid_password' | translate}}</p>
 	<div class="buttons">
-		<button class="button button--fat button--primary">Continue</button>
+		<button class="button button--fat button--primary" (click)="continue()">{{'wallet.continue' | translate}}</button>
 	</div>
 </div>
 
-<div *ngIf="true">
-	<h2 *ngIf="backup">Backup Private Key</h2>
-	<h2 *ngIf="!backup">Private Key</h2>
+<div *ngIf="passwordVerified">
+	<h2 *ngIf="backup">{{'wallet.backup_pvk' | translate}}</h2>
+	<h2 *ngIf="!backup">{{'wallet.private_key' | translate}}</h2>
 
 	<div class="alert-container">
 		<img src="assets/images/alert.svg">
-		<p>You have to backup your recovery phrase. It is strongly recommended to store the backup copies in physically separate, offline environment. If someone were to find your recovery phrase they could access your wallet.</p>
+		<p>{{'wallet.pvk_tooltip' | translate}}</p>
 	</div>
 
 	<div class="public-key">
-		<span>{{privateKey}}</span>
+		<span class="notranslate">{{privateKey}}</span>
 		<img src="assets/images/copy.svg" (click)="copy()">
 	</div>
 	<label *ngIf="backup">
 		<input type="checkbox" class="checkbox" [formControl]="seenControl">
-		<span>Backed up</span>
+		<span>{{'wallet.backed_up' | translate}}</span>
 	</label>
 
 	<div class="buttons text-right" *ngIf="backup">
-		<button class="button button--primary button--upper" [disabled]="!seenControl.value" (click)="confirm()">Confirm</button>
+		<button class="button button--primary button--upper" [disabled]="!seenControl.value" (click)="confirm()">{{'wallet.confirm' | translate}}</button>
 	</div>
 </div>
