--- a/src/app/core/private-key/private-key.component.scss
+++ b/src/app/core/private-key/private-key.component.scss
@@ -2,14 +2,14 @@ h2 {
 	font-size: 24px;
 	line-height: 30px;
 	text-transform: uppercase;
-	margin: 0 0 24px;
+	margin: 0 0 4px;
 }
 
 p.description {
 	font-size: 14px;
 	line-height: 17px;
 	color: #8A8FA5;
-	margin: 0 0 25px;
+	margin: 0 0 36px;
 }
 
 .public-key {
@@ -28,6 +28,7 @@ p.description {
 		flex: 1;
 		overflow: hidden;
 		display: inline-block;
+		word-break: break-all;
 	}
 
 	img {
@@ -36,6 +37,10 @@ p.description {
 		margin-left: 3px;
 		cursor: pointer;
 	}
+}
+
+.error-message {
+	margin: -16px 0 22px;
 }
 
 input[type="password"] {
