--- a/src/app/core/really-postpone/really-postpone.component.html
+++ b/src/app/core/really-postpone/really-postpone.component.html
@@ -1,11 +1,11 @@
-<h2>Backup Private Key</h2>
+<h2>{{'wallet.recovery_phrase' | translate}}</h2>
 
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
-	<p>Are you sure you want to postpone your Recovery Phrase backup? <span>In case you press 'Yes' and forget your password until next login, there will be no way to restore your wallet.</span></p>
+	<p>{{'wallet.are_you_sure' | translate}}<span>{{'wallet.in_case_text' | translate}}</span></p>
 </div>
 
 <div class="buttons">
-	<button class="button button--primary button--fat">Yes</button>
-	<button class="button button--primary button--fat">No</button>
+	<button class="button button--primary button--fat" (click)="close(false)">{{'wallet.yes' | translate}}</button>
+	<button class="button button--primary button--fat" (click)="close(true)">{{'wallet.no' | translate}}</button>
 </div>
