--- a/src/app/core/recovery-phrase/recovery-phrase.component.scss
+++ b/src/app/core/recovery-phrase/recovery-phrase.component.scss
@@ -2,14 +2,14 @@ h2 {
 	font-size: 24px;
 	line-height: 30px;
 	text-transform: uppercase;
-	margin: 0 0 24px;
+	margin: 0 0 4px;
 }
 
 p.description {
 	font-size: 14px;
 	line-height: 17px;
 	color: #8A8FA5;
-	margin: 0 0 25px;
+	margin: 0 0 36px;
 }
 
 .recovery-phrase {
@@ -22,6 +22,10 @@ p.description {
 	border-radius: 8px;
 	min-height: 46px;
 	padding: 10px 24px;
+}
+
+.error-message {
+	margin: -16px 0 22px;
 }
 
 input[type="password"] {
