--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -1,28 +1,36 @@
 h2 {
 	text-transform: uppercase;
 	color: #1F2742;
-	margin: 0 0 27px;
+	margin: 0 0 24px;
 }
 
 .descr {
 	color: #8A8FA5;
-	margin: 0 0 27px;
+	margin: 0 0 36px;
 }
 
 input {
 	width: 100%;
 	margin: 0 0 20px 0;
 }
+.share-app{
+	margin-top: 56px;
+	a{
+		display: inline-block;
+		&:not(:last-child){
+			margin-right: 24px;
+		}
+		img{
+			height: 40px;
+		}
+	}
 
+}
 .buttons-container {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	margin: 0 0 20px;
-
-	.button {
-		padding: 16px 32px;
-	}
 
 	a {
 		font-weight: 600;
@@ -43,6 +51,11 @@ input {
 			background-color: #607bed;
 		}
 	}
+}
+
+.input-wrapper__shadow {
+	top: -1px; left: -1px;
+	right: -1px; bottom: -1px;
 }
 
 p.terms {
