--- a/src/app/wallet/recovery-first/recovery-first.component.html
+++ b/src/app/wallet/recovery-first/recovery-first.component.html
@@ -1,16 +1,16 @@
-<h2>Recovery Phrase</h2>
+
+<h2>{{'wallet.recovery_phrase' | translate}}</h2>
 
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
-	<p>This is only way to reset your password!<br/>Your PBG tokens cant’s be recovered without it</p>
+	<p>{{'wallet.only_way_first' | translate}}</p>
 </div>
 
-<div class="recovery-phrase">
-{{brainKey}}</div>
-
-<p class="recovery-phrase-text">It is strongly recommended that you store backups of your recovery phrase in physically separate, offline environment. Do not share it with anyone else.</p>
+<div class="recovery-phrase" >
+	<span class="notranslate">{{brainKey}}</span>
+</div>
 
 <div class="buttons">
-	<button class="button button--primary button--fat button--upper" (click)="recover()">Ok</button>
-	<button class="button button--upper button--fat" (click)="later()">Later</button>
+	<button class="button button--primary button--fat button--upper" (click)="recover()">{{'wallet.backup_1' | translate}}</button>
+	<button class="button button--upper button--fat" (click)="later()">{{'wallet.later' | translate}}</button>
 </div>
